--- a/SantanderTest.HackerAPI.Tests/HackerAPI.Tests.csproj
+++ b/SantanderTest.HackerAPI.Tests/HackerAPI.Tests.csproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SantanderTest.HackerAPI.Model\SantanderTest.HackerAPI.Model.csproj" />
-    <ProjectReference Include="..\SantanderTest.HackerAPI.Services\SantanderTest.HackerAPI.Services.csproj" />
+    <ProjectReference Include="..\SantanderTest.HackerAPI.Model\HackerAPI.Model.csproj" />
+    <ProjectReference Include="..\SantanderTest.HackerAPI.Services\HackerAPI.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
