--- a/HackerAPI.Tests/HackerAPI.Tests.csproj
+++ b/HackerAPI.Tests/HackerAPI.Tests.csproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SantanderTest.HackerAPI.Model\HackerAPI.Model.csproj" />
-    <ProjectReference Include="..\SantanderTest.HackerAPI.Services\HackerAPI.Services.csproj" />
+    <ProjectReference Include="..\HackerAPI.Model\HackerAPI.Model.csproj" />
+    <ProjectReference Include="..\HackerAPI.Services\HackerAPI.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
