--- a/HackerAPI/HackerAPI.csproj
+++ b/HackerAPI/HackerAPI.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\HackerAPI.Services\HackerAPI.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
